--- a/home.html
+++ b/home.html
@@ -7,26 +7,108 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:800|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
-  <script src="./js/jquery.js" type="text/javascript" defer></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
   <script src="./js/script.js" type="text/javascript" defer></script>
 </head>
 <body>
   <div class="fullscreen-bg">
-    <video loop muted autoplay poster="/images/###" class="fullscreen-bg__video">
-        <source src="/images/###" type="video/mp4">
+    <video loop muted autoplay poster="./img/th.mp4" class="fullscreen-bg__video">
+        <source src="./img/th.mp4" type="video/mp4">
     </video>
   </div>
-  <div class="row top-nav">
-    <div class="col s12 valign-wrapper">
-      <div class="valign" id="picture"></div>
-      <h1 class="valign">Taylor<span id="slash">/</span></h1>
-      <ul>
-        <li><a href="#">LinkedIn</a></li>
-        <li><a href="#"></a>GitHub</li>
-      </ul>
+  <div class="row" id="header">
+    <div class="col s1" id="picture"></div>
+    <div class="col s8" id="logo">
+      <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
+    </div>
+    <!-- <div class="input-field col s3">
+      <select>
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+      </select>
+    </div> -->
+  </div>
+  <div class="row quote">
+    <div class="col s2"></div>
+    <div class="col s8 quote-text">
+    <p>I believe that success is measured by one's dedication to enhancing their capacity for achievement, rather than by achievements alone.</p>
+    </div>
+    <div class="col s2"></div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1>Define User Problems</h1>
+    </center>
+    <div class="col s3 case-block case-block-image" id="cb-image-1"></div>
+    <div class="col s1"></div>
+    <div class="col s8 case-block cb-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.</p>
     </div>
   </div>
-  <div class="row container">
+  <div class="row quote">
+    <div class="col s2"></div>
+    <div class="col s8 quote-text">
+    <p>That means blending an obsession for problem-solving with a relentless pursuit of learning.</p>
+    </div>
+    <div class="col s2"></div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1>Assess Product Opportunity</h1>
+    </center>
+    <div class="col s8 case-block cb-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.</p>
+    </div>
+    <div class="col s1"></div>
+    <div class="col s3 case-block case-block-image" id="cb-image-2"></div>
+  </div>
+  <div class="row quote">
+    <div class="col s2"></div>
+    <div class="col s8 quote-text">
+    <p>Together, these elements allow me to create maximum value by enabling dreamers, creatives, and builders - crafting a vision and delivering it.</p>
+    </div>
+    <div class="col s2"></div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1>Develop Product Requirements</h1>
+    </center>
+    <div class="col s3 case-block case-block-image" id="cb-image-3"></div>
+    <div class="col s1"></div>
+    <div class="col s8 case-block cb-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat.</p>
+    </div>
+  </div>
+  <div class="row quote">
+    <div class="col s2"></div>
+    <div class="col s8 quote-text">
+    <p>I live to find personal and professional opportunities that connect me with ambitious individuals, of diverse backgrounds and perspectives, for the social and economic betterment of society.</p>
+    </div>
+    <div class="col s2"></div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1>Build Product Roadmap</h1>
+    </center>
+    <div class="col s8 case-block cb-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut</p>
+    </div>
+    <div class="col s1"></div>
+    <div class="col s3 case-block case-block-image" id="cb-image-4"></div>
   </div>
 </body>
 </html>
