update css functionality

--- a/home.html
+++ b/home.html
@@ -19,17 +19,28 @@
   </div>
   <div class="row" id="header">
     <div class="col s1" id="picture"></div>
-    <div class="col s8" id="logo">
+    <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
+      <ul class="menu carrot">
+        <li><a id="main-list" href="#">learn_more</a>
+          <ul>
+            <li class="itemer"><a class="lister" href="#">Defining User Problems</a></li>
+            <li class="itemer"><a class="lister" href="#">Assessing Product Opportunity</a></li>
+            <li class="itemer"><a class="lister" href="#">Developing Product Requirements</a></li>
+            <li class="itemer"><a class="lister" href="#">Building Product Roadmap</a></li>
+         </ul>
+        </li>
+      </ul>
     </div>
-    <!-- <div class="input-field col s3">
-      <select>
-        <option value="" disabled selected>Choose your option</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-      </select>
-    </div> -->
+  </div>
+  <div class="row intro">
+    <div class="col s1"></div>
+    <div class="col s10 intro-text">
+    <p>How do I think about Product Management?<br>
+    <span>Scroll through my portfolio and see how I break out my process in order to stay organized and deliver simple tools & features that empower users.</span>
+    </p>
+    </div>
+    <div class="col s2"></div>
   </div>
   <div class="row quote">
     <div class="col s2"></div>
@@ -40,7 +51,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1>Define User Problems</h1>
+      <h1>Defining User Problems</h1>
     </center>
     <div class="col s3 case-block case-block-image" id="cb-image-1"></div>
     <div class="col s1"></div>
@@ -61,7 +72,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1>Assess Product Opportunity</h1>
+      <h1>Assessing Product Opportunity</h1>
     </center>
     <div class="col s8 case-block cb-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -81,7 +92,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1>Develop Product Requirements</h1>
+      <h1>Developing Product Requirements</h1>
     </center>
     <div class="col s3 case-block case-block-image" id="cb-image-3"></div>
     <div class="col s1"></div>
@@ -100,7 +111,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1>Build Product Roadmap</h1>
+      <h1>Building Product Roadmap</h1>
     </center>
     <div class="col s8 case-block cb-text">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
