--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Taylor Halsted</title>
+  <link rel="shortcut icon"
+       href="./img/th.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:800|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
