--- a/home.html
+++ b/home.html
@@ -19,17 +19,18 @@
         <source src="./img/th.mp4" type="video/mp4">
     </video>
   </div>
-  <div class="row" id="header">
+  <div class="row z-depth-1" id="header">
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
       <ul class="menu carrot">
         <li><a id="main-list" href="#">learn_more</a>
           <ul>
-            <li class="itemer"><a class="lister" href="#">Defining User Problems</a></li>
-            <li class="itemer"><a class="lister" href="#">Assessing Product Opportunity</a></li>
-            <li class="itemer"><a class="lister" href="#">Developing Product Requirements</a></li>
-            <li class="itemer"><a class="lister" href="#">Building Product Roadmap</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Defining User Problems</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Assessing Product Opportunities</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Developing Product Requirements</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframing Concepts</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Building Product Roadmaps</a></li>
          </ul>
         </li>
       </ul>
@@ -37,91 +38,121 @@
   </div>
   <div class="row intro">
     <div class="col s1"></div>
-    <div class="col s10 intro-text">
-    <p>How do I think about Product Management?<br>
-    <span>Scroll through my portfolio and see how I break out my process in order to stay organized and deliver simple tools & features that empower users.</span>
-    </p>
+    <div class="col s10 intro-text z-depth-1">
+      <p>How do I think about Product Management?<br>
+      <span>Scroll through my portfolio and see the process I use to stay organized and deliver simple tools & features that empower users.</span>
+      </p>
     </div>
     <div class="col s2"></div>
   </div>
+  <div class="bounce"></div>
   <div class="row quote">
     <div class="col s2"></div>
-    <div class="col s8 quote-text">
+    <div class="col s8 quote-text z-depth-1">
     <p>I believe that success is measured by one's dedication to enhancing their capacity for achievement, rather than by achievements alone.</p>
     </div>
     <div class="col s2"></div>
   </div>
   <div class="row container case">
     <center>
-      <h1>Defining User Problems</h1>
+      <h1 class="z-depth-2">Defining User Problems</h1>
     </center>
-    <div class="col s3 case-block case-block-image" id="cb-image-1"></div>
-    <div class="col s1"></div>
-    <div class="col s8 case-block cb-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin</a>.</p>
+    </div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-2"></div>
+      </center>
     </div>
   </div>
   <div class="row quote">
     <div class="col s2"></div>
-    <div class="col s8 quote-text">
+    <div class="col s8 quote-text z-depth-1">
     <p>That means blending an obsession for problem-solving with a relentless pursuit of learning.</p>
     </div>
     <div class="col s2"></div>
   </div>
   <div class="row container case">
     <center>
-      <h1>Assessing Product Opportunity</h1>
+      <h1 class="z-depth-2">Assessing Product Opportunities</h1>
     </center>
-    <div class="col s8 case-block cb-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>In listening to our B2B customers, I found that they struggled to visualize the impact of implementing our education solutions. By translating their needs into requirements, I led my team to develop analytics products that allowed prospects to envision their roadmap to success and the results of their investments, driving higher confidence and more closed business.</p>
     </div>
-    <div class="col s1"></div>
-    <div class="col s3 case-block case-block-image" id="cb-image-2"></div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-3"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-4"></div>
+      </center>
+    </div>
   </div>
   <div class="row quote">
     <div class="col s2"></div>
-    <div class="col s8 quote-text">
+    <div class="col s8 quote-text z-depth-1">
     <p>Together, these elements allow me to create maximum value by enabling dreamers, creatives, and builders - crafting a vision and delivering it.</p>
     </div>
     <div class="col s2"></div>
   </div>
   <div class="row container case">
     <center>
-      <h1>Developing Product Requirements</h1>
+      <h1 class="z-depth-2">Developing Product Requirements</h1>
     </center>
-    <div class="col s3 case-block case-block-image" id="cb-image-3"></div>
-    <div class="col s1"></div>
-    <div class="col s8 case-block cb-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>Pair-based. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
       consequat.</p>
+    </div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
+      </center>
     </div>
   </div>
   <div class="row quote">
     <div class="col s2"></div>
-    <div class="col s8 quote-text">
+    <div class="col s8 quote-text z-depth-1">
+    <p>It's important to build the change you wish to see in the world, which is why I focus on technologies that support motivation, education, mental health & fitness.</p>
+    </div>
+    <div class="col s2"></div>
+  </div>
+  <div class="row container case">
+    <center>
+      <h1 class="z-depth-2">Wireframing Concepts</h1>
+    </center>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>As the glue between designers, developers and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by fascilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
+    </div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-7"></div>
+      </center>
+    </div>
+  </div>
+  <div class="row quote">
+    <div class="col s2"></div>
+    <div class="col s8 quote-text z-depth-1">
     <p>I live to find personal and professional opportunities that connect me with ambitious individuals, of diverse backgrounds and perspectives, for the social and economic betterment of society.</p>
     </div>
     <div class="col s2"></div>
   </div>
   <div class="row container case">
     <center>
-      <h1>Building Product Roadmap</h1>
+      <h1 class="z-depth-2">Building Product Roadmaps</h1>
     </center>
-    <div class="col s8 case-block cb-text">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut</p>
+    <div class="col s12 case-block cb-text z-depth-2">
+      <p>Envisioning a phased product launch can be tough, especially when it involves multiple functional groups and stakeholders. Roadmapping is critical to building consensus, attaining budget, and communicating progress to management. Documenting our goals, timeframe, and interdependencies made leading a cross-functional team, from concept to on-schedule launch, a seamless process.</p>
     </div>
-    <div class="col s1"></div>
-    <div class="col s3 case-block case-block-image" id="cb-image-4"></div>
+    <div class="col s12">
+      <center>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-8"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-9"></div>
+      </center>
+    </div>
   </div>
 </body>
 </html>
