--- a/home.html
+++ b/home.html
@@ -34,6 +34,8 @@
          </ul>
         </li>
       </ul>
+      <div class="link-icon linkedin"></div>
+      <div class="link-icon github"></div>
     </div>
   </div>
   <div class="row intro">
@@ -100,16 +102,12 @@
       <h1 class="z-depth-2">Developing Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>Pair-based. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.</p>
+      <p>As an advocate of meditation, I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
     </div>
     <div class="col s12">
       <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-5"></div>
+        <div class="case-block case-block-image z-depth-3" id="cb-image-6"></div>
       </center>
     </div>
   </div>
@@ -153,6 +151,11 @@
         <div class="case-block case-block-image z-depth-3" id="cb-image-9"></div>
       </center>
     </div>
+  </div>
+  <div class="row" id="footer">
+      <div class="col s12 carrot">
+      <center>Designed & built with care by me, Taylor.</center>
+      </div>
   </div>
 </body>
 </html>
