--- a/home.html
+++ b/home.html
@@ -34,15 +34,15 @@
          </ul>
         </li>
       </ul>
-      <div class="link-icon linkedin"></div>
-      <div class="link-icon github"></div>
+      <div class="link-icon linkedin z-depth-2"></div>
+      <div class="link-icon github z-depth-2"></div>
     </div>
   </div>
   <div class="row intro">
     <div class="col s1"></div>
     <div class="col s10 intro-text z-depth-1">
       <p>How do I think about Product Management?<br>
-      <span>Scroll through my portfolio and see the process I use to stay organized and deliver simple tools & features that empower users.</span>
+      <span>See my process for building simple products that empower users</span>
       </p>
     </div>
     <div class="col s2"></div>
