--- a/home.html
+++ b/home.html
@@ -153,8 +153,8 @@
     </div>
   </div>
   <div class="row" id="footer">
-      <div class="col s12 carrot">
-      <center>Designed & built with care by me, Taylor.</center>
+      <div class="col s12">
+      <center>Designed & built with care by Taylor.</center>
       </div>
   </div>
 </body>
