--- a/home.html
+++ b/home.html
@@ -26,11 +26,11 @@
       <ul class="menu carrot">
         <li><a id="main-list" href="#">learn_more</a>
           <ul>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Defining User Problems</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Assessing Product Opportunities</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Developing Product Requirements</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframing Concepts</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Building Product Roadmaps</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Define User Problems</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Assess Product Opportunity</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Develop Product Requirements</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframe Concepts</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmaps</a></li>
          </ul>
         </li>
       </ul>
@@ -57,7 +57,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Defining User Problems</h1>
+      <h1 class="z-depth-2">Define User Problems</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin</a>.</p>
@@ -78,7 +78,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Assessing Product Opportunities</h1>
+      <h1 class="z-depth-2">Assess Product Opportunity</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>In listening to our B2B customers, I found that they struggled to visualize the impact of implementing our education solutions. By translating their needs into requirements, I led my team to develop analytics products that allowed prospects to envision their roadmap to success and the results of their investments, driving higher confidence and more closed business.</p>
@@ -99,7 +99,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Developing Product Requirements</h1>
+      <h1 class="z-depth-2">Develop Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>As an advocate of meditation, I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
@@ -120,7 +120,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Wireframing Concepts</h1>
+      <h1 class="z-depth-2">Wireframe Concepts</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>As the glue between designers, developers and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by fascilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
@@ -140,7 +140,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Building Product Roadmaps</h1>
+      <h1 class="z-depth-2">Build Product Roadmaps</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>Envisioning a phased product launch can be tough, especially when it involves multiple functional groups and stakeholders. Roadmapping is critical to building consensus, attaining budget, and communicating progress to management. Documenting our goals, timeframe, and interdependencies made leading a cross-functional team, from concept to on-schedule launch, a seamless process.</p>
