--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <li class="itemer z-depth-1"><a class="lister" href="#">Assess Product Opportunity</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Develop Product Requirements</a></li>
             <li class="itemer z-depth-1"><a class="lister" href="#">Wireframe Concepts</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmaps</a></li>
+            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmap</a></li>
          </ul>
         </li>
       </ul>
@@ -140,7 +140,7 @@
   </div>
   <div class="row container case">
     <center>
-      <h1 class="z-depth-2">Build Product Roadmaps</h1>
+      <h1 class="z-depth-2">Build Product Roadmap</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
       <p>Envisioning a phased product launch can be tough, especially when it involves multiple functional groups and stakeholders. Roadmapping is critical to building consensus, attaining budget, and communicating progress to management. Documenting our goals, timeframe, and interdependencies made leading a cross-functional team, from concept to on-schedule launch, a seamless process.</p>
