--- a/home.html
+++ b/home.html
@@ -34,8 +34,11 @@
          </ul>
         </li>
       </ul>
+      <div class="link-icon resume z-depth-2"></div>
+      <div class="white-box1"></div>
       <div class="link-icon linkedin z-depth-2"></div>
       <div class="link-icon github z-depth-2"></div>
+      <div class="white-box2"></div>
     </div>
   </div>
   <div class="row intro">
