--- a/home.html
+++ b/home.html
@@ -157,7 +157,9 @@
   </div>
   <div class="row" id="footer">
       <div class="col s12">
-      <center>Designed & built with care by Taylor.</center>
+      <center>Designed & built with care by Taylor.<br>
+      <span>Copyright © 2017</span>
+      </center>
       </div>
   </div>
 </body>
