--- a/home.html
+++ b/home.html
@@ -52,11 +52,11 @@
   </div>
   <div class="bounce"></div>
   <div class="row quote">
-    <div class="col s2"></div>
-    <div class="col s8 quote-text z-depth-1">
-    <p>I believe that success is measured by one's dedication to enhancing their capacity for achievement, rather than by achievements alone.</p>
+    <div class="col s1"></div>
+    <div class="col s10 quote-text z-depth-1">
+    <p>I believe that success is measured by one's dedication to enhancing their capacity for achievement, rather than by achievements alone. That means blending an obsession for problem-solving with a relentless pursuit of learning. Together, these elements allow me to create maximum value by enabling dreamers, creatives, and builders - crafting a vision and delivering it. I live to find personal and professional opportunities that connect me with ambitious individuals, of diverse backgrounds and perspectives, for the social and economic betterment of society.</p>
     </div>
-    <div class="col s2"></div>
+    <div class="col s1"></div>
   </div>
   <div class="row container case">
     <center>
@@ -72,13 +72,13 @@
       </center>
     </div>
   </div>
-  <div class="row quote">
+  <!-- <div class="row quote">
     <div class="col s2"></div>
     <div class="col s8 quote-text z-depth-1">
     <p>That means blending an obsession for problem-solving with a relentless pursuit of learning.</p>
     </div>
     <div class="col s2"></div>
-  </div>
+  </div> -->
   <div class="row container case">
     <center>
       <h1 class="z-depth-2">Assess Product Opportunity</h1>
@@ -93,13 +93,13 @@
       </center>
     </div>
   </div>
-  <div class="row quote">
+ <!--  <div class="row quote">
     <div class="col s2"></div>
     <div class="col s8 quote-text z-depth-1">
     <p>Together, these elements allow me to create maximum value by enabling dreamers, creatives, and builders - crafting a vision and delivering it.</p>
     </div>
     <div class="col s2"></div>
-  </div>
+  </div> -->
   <div class="row container case">
     <center>
       <h1 class="z-depth-2">Develop Product Requirements</h1>
@@ -114,13 +114,13 @@
       </center>
     </div>
   </div>
-  <div class="row quote">
+  <!-- <div class="row quote">
     <div class="col s2"></div>
     <div class="col s8 quote-text z-depth-1">
     <p>It's important to build the change you wish to see in the world, which is why I focus on technologies that support motivation, education, mental health & fitness.</p>
     </div>
     <div class="col s2"></div>
-  </div>
+  </div> -->
   <div class="row container case">
     <center>
       <h1 class="z-depth-2">Wireframe Concepts</h1>
@@ -134,13 +134,13 @@
       </center>
     </div>
   </div>
-  <div class="row quote">
+  <!-- <div class="row quote">
     <div class="col s2"></div>
     <div class="col s8 quote-text z-depth-1">
     <p>I live to find personal and professional opportunities that connect me with ambitious individuals, of diverse backgrounds and perspectives, for the social and economic betterment of society.</p>
     </div>
     <div class="col s2"></div>
-  </div>
+  </div> -->
   <div class="row container case">
     <center>
       <h1 class="z-depth-2">Build Product Roadmap</h1>
