--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="fullscreen-bg">
-    <video loop muted autoplay poster="./img/th.mp4" class="fullscreen-bg__video">
+    <video loop muted autoplay poster="./img/poster.jpg" class="fullscreen-bg__video">
         <source src="./img/th.mp4" type="video/mp4">
     </video>
   </div>
