--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
       <h1 class="z-depth-2">Develop Product Requirements</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>As an advocate of meditation, I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
+      <p>I'm an advocate of meditation, so I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
     </div>
     <div class="col s12">
       <center>
