--- a/home.html
+++ b/home.html
@@ -119,7 +119,7 @@
       <h1 class="z-depth-2">Wireframe Concepts</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>As the glue between designers, developers and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by fascilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
+      <p>As the glue between designers, developers, and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by facilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
     </div>
     <div class="col s12">
       <center>
