--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <title>Taylor Halsted</title>
   <link rel="shortcut icon"
        href="./img/th.png">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:800|Source+Sans+Pro" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:800|Josefin+Sans:400" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/materialize.min.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -19,7 +19,7 @@
         <source src="./img/th.mp4" type="video/mp4">
     </video>
   </div>
-  <div class="row z-depth-1" id="header">
+  <div class="row z-depth-2" id="header">
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
@@ -56,7 +56,7 @@
       <h1 class="z-depth-2">Define User Problems</h1>
     </center>
     <div class="col s12 case-block cb-text z-depth-2">
-      <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin</a>.</p>
+      <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin PRM</a>.</p>
     </div>
     <div class="col s12">
       <center>
