--- a/home.html
+++ b/home.html
@@ -23,17 +23,6 @@
     <div class="col s1" id="picture"></div>
     <div class="col s10" id="logo">
       <span class="carrot">//</span><h1>TaylorHalsted</h1><span class="carrot">.</span>
-      <ul class="menu carrot">
-        <li><a id="main-list" href="#">learn_more</a>
-          <ul>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Define User Problems</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Assess Product Opportunity</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Develop Product Requirements</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Wireframe Concepts</a></li>
-            <li class="itemer z-depth-1"><a class="lister" href="#">Build Product Roadmap</a></li>
-         </ul>
-        </li>
-      </ul>
       <div class="link-icon resume z-depth-2"></div>
       <div class="white-box1"></div>
       <div class="link-icon linkedin z-depth-2"></div>
@@ -41,84 +30,19 @@
       <div class="white-box2"></div>
     </div>
   </div>
-  <div class="row intro">
-    <div class="col s1"></div>
-    <div class="col s10 intro-text z-depth-1">
-      <p>How do I think about Product Management?<br>
-      <span>See my process for building simple products that empower users</span>
-      </p>
+  <div class="row intro-main">
+    <center>
+    <div class="intro-text-main z-depth-1" id="main-pic-1">
+      <p>Process</p>
+      <span>— how i think —</span>
     </div>
+    <div class="spacer"></div>
+    <div class="intro-text-main z-depth-1" id="main-pic-2">
+      <p>Portfolio</p>
+      <span>— what i've built —</span>
+    </div>
+    </center>
     <div class="col s2"></div>
-  </div>
-  <div class="bounce"></div>
-  <div class="row container case">
-    <center>
-      <h1 class="z-depth-2">Define User Problems</h1>
-    </center>
-    <div class="col s12 case-block cb-text z-depth-2">
-      <p>When surveying 30+ career-changers at General Assembly's Web Development Bootcamp, it quickly became clear that one of the biggest pain points around job attainment was managing relationship development with target companies. Understanding the way users were trying to solve this problem on their own helped me envision a simple solution – <a class="linker" href="https://hustlepuffin.herokuapp.com" target="_blank">HustlePuffin PRM</a>.</p>
-    </div>
-    <div class="col s12">
-      <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-1"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-2"></div>
-      </center>
-    </div>
-  </div>
-  <div class="row container case">
-    <center>
-      <h1 class="z-depth-2">Assess Product Opportunity</h1>
-    </center>
-    <div class="col s12 case-block cb-text z-depth-2">
-      <p>In listening to our B2B customers, I found that they struggled to visualize the impact of implementing our education solutions. By translating their needs into requirements, I led my team to develop analytics products that allowed prospects to envision their roadmap to success and the results of their investments, driving higher confidence and more closed business.</p>
-    </div>
-    <div class="col s12">
-      <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-3"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-4"></div>
-      </center>
-    </div>
-  </div>
-  <div class="row container case">
-    <center>
-      <h1 class="z-depth-2">Develop Product Requirements</h1>
-    </center>
-    <div class="col s12 case-block cb-text z-depth-2">
-      <p>I'm an advocate of meditation, so I decided to envision a feature for one of my favorite apps - Headspace - that would drive higher engagement. By translating user stories around persistence from the broader health market into product requirements, I defined and validated an approach which could yield a material improvement to user retention.</p>
-    </div>
-    <div class="col s12">
-      <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-5"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-6"></div>
-      </center>
-    </div>
-  </div>
-  <div class="row container case">
-    <center>
-      <h1 class="z-depth-2">Wireframe Concepts</h1>
-    </center>
-    <div class="col s12 case-block cb-text z-depth-2">
-      <p>As the glue between designers, developers, and management - it's important to establish a shared vision. Wireframing lets stakeholders visualize success, but more importantly, it provides an opportunity to contribute by facilitating a discussion. Driving alignment beforehand ensures less re-work and higher quality once development begins.</p>
-    </div>
-    <div class="col s12">
-      <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-7"></div>
-      </center>
-    </div>
-  </div>
-  <div class="row container case">
-    <center>
-      <h1 class="z-depth-2">Build Product Roadmap</h1>
-    </center>
-    <div class="col s12 case-block cb-text z-depth-2">
-      <p>Envisioning a phased product launch can be tough, especially when it involves multiple functional groups and stakeholders. Roadmapping is critical to building consensus, attaining budget, and communicating progress to management. Documenting our goals, timeframe, and interdependencies made leading a cross-functional team, from concept to on-schedule launch, a seamless process.</p>
-    </div>
-    <div class="col s12">
-      <center>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-8"></div>
-        <div class="case-block case-block-image z-depth-3" id="cb-image-9"></div>
-      </center>
-    </div>
   </div>
   <div class="row" id="footer">
       <div class="col s12">
