--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
   </div>
   <div class="row" id="footer">
       <div class="col s12">
-      <center>Designed & built with care by Taylor.<br>
+      <center>Designed & built with care by Taylor<br>
       <span>Copyright © 2017</span>
       </center>
       </div>
