--- a/home.html
+++ b/home.html
@@ -44,6 +44,7 @@
     </center>
     <div class="col s2"></div>
   </div>
+  <div class="makeSpace"></div>
   <div class="row" id="footer">
       <div class="col s12">
       <center>Designed & built with care by Taylor<br>
