--- a/home.html
+++ b/home.html
@@ -30,6 +30,13 @@
       <div class="white-box2"></div>
     </div>
   </div>
+  <!-- <center>
+    <div class="quote">
+      <div class="quote-text">
+        <p>I help engineers & creatives build technologies that promote personal growth through motivation, education, mental health & fitness.</p>
+      </div>
+    </div>
+  </center> -->
   <div class="row intro-main">
     <center>
     <div class="intro-text-main z-depth-1" id="main-pic-1">
